Fix overflow x.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
     scroll-behavior: smooth;
     font-size: 100%;
     backdrop-filter: blur(10px);
+    overflow-x: hidden;
 }
 
 body {
@@ -16,10 +17,7 @@ body {
     width: 100%;
     /* background-image: url("../images/main-background.jpg"), url("../images/main-background_projectTile_m.png"); */
     background: linear-gradient(45deg, rgb(14, 14, 14), rgb(26, 26, 26));
-    background-position: center, center;
-    background-size: cover, cover;
-    background-attachment: fixed, fixed;
-    overflow-x: hidden;
+    background-attachment: fixed;
 }
 
 h1 {
@@ -146,14 +144,12 @@ a {
 #toggle span:after,
 #toggle span:before {
     content: "";
-    /*??*/
     position: absolute;
     top: -9px;
-    /*??*/
+
 }
 
 #toggle span:after {
-    /*??*/
     top: 9px;
 }
 
@@ -168,9 +164,8 @@ a {
     height: 4px;
     background-color: var(--white);
     transition: all 0.2s;
-    /*??*/
     backface-visibility: hidden;
-    /*??*/
+
 }
 
 /* WHEN CLICKED  */
@@ -187,7 +182,6 @@ a {
 }
 
 #toggle.on+#navigation-list {
-    /*??*/
     opacity: 1;
     visibility: visible;
 }
@@ -462,8 +456,6 @@ a {
 
 /************************************ OVERALL TRANSITIONS ************************************/
 
-
-
 .hidden {
     opacity: 0;
     filter: blur(5px);
@@ -493,14 +485,14 @@ a {
 .hiddenAtRight {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(50%);
+    transform: scaleX(0);
     transition: all 1s;
 }
 
 .revealFromRight {
     opacity: 1;
     filter: blur(0);
-    transform: translateX(0);
+    transform: scaleX(100%);
 }
 
 
@@ -559,6 +551,14 @@ a {
 
     #toggle {
         display: block;
+    }
+
+    .navigation-bar {
+        max-width: 100vw;
+    }
+
+    header {
+        width: 100vw;
     }
 
     #navigation-list {
